--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <title>Welcome to ei1711's WebPage</title>
     </head>
     <body>
