--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="ja">
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
