--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Hello World!</h1>
         <h2>ei1711's github.io</h2>
+        <a href="contents/commands.html">UNIX Commands</a>
     </body>
 </html>
