--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Welcome to ei1711's WebPage</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <h2>ei1711's github.io</h2>
-        <a href="contents/commands.html">UNIX Commands</a>
+        <h1>ei1711's github.io</h1>
+        <p>よく使うUNIXコマンドや自分の備忘録などなど</p>
     </body>
 </html>
