--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>ei1711's github.io</h1>
         <p>よく使うUNIXコマンドや自分の備忘録などなど</p>
+        <a href="contents/index.html">メニューはこ↑こ↓</a>
     </body>
 </html>
