--- a/contents/commands.html
+++ b/contents/commands.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <title>UNIX Commands</title>
+        <title>UNIXコマンド</title>
     </head>
     <body>
         <ul>
