--- a/contents/index.html
+++ b/contents/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../css/style.css" />
         <title>Contents Menu</title>
     </head>
     <body>
