--- a/contents/index.html
+++ b/contents/index.html
@@ -2,6 +2,11 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Comatible" content="IE-edge" />
+        <meta name="viewport" content="width-device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="bootstrap-4.1.3-dist/css/bootstrap.css" />
+        <script src="jquery-3.3.1.js" />
+        <script src="bootstrap-4.1.3-dist/js/bootstrap.js" />
         <link rel="stylesheet" type="text/css" href="../css/style.css" />
         <title>Contents Menu</title>
     </head>
