--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <body>
         <h1>ei1711's github.io</h1>
         <p>よく使うUNIXコマンドや自分の備忘録などなど</p>
-        <a href="contents/index.html">メニューはこ↑こ↓</a>
-        <a href="https://twitter.com/ei1711">Twitter - @ei1711</a>
+        <ul>
+            <li><a href="contents/index.html">メニューはこ↑こ↓</a></li>
+            <li><a href="https://twitter.com/ei1711">Twitter - @ei1711</a></li>
+        </ul>
     </body>
 </html>
