--- a/contents/commands.html
+++ b/contents/commands.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Comatible" content="IE-edge" />
         <meta name="viewport" content="width-device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="bootstrap-4.1.3-dist/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="../bootstrap-4.1.3-dist/css/bootstrap.css" />
+        <script src="../jquery-3.3.1.js"></script>
+        <script src="../bootstrap-4.1.3-dist/js/bootstrap.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <script src="jquery-3.3.1.js"></script>
-        <script src="bootstrap-4.1.3-dist/js/bootstrap.js"></script>
         <title>UNIXコマンド</title>
     </head>
     <body>
