--- a/contents/test2.html
+++ b/contents/test2.html
@@ -8,12 +8,17 @@
         <script src="../jquery-3.3.1.js"></script>
         <script src="../bootstrap-4.1.3-dist/js/bootstrap.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <title>Contents Menu</title>
+        <title>Test Page</title>
     </head>
     <body>
-        <h1>飛びたいページを選んでクリックしてね</h1>
-        <ul>
-            <li><a href="./commands.html">UNIXコマンドまとめ</a></li>
-        </ul>
+        <header style="background-color: gray;">Header</header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-2" style="background-color: red;">Red</div>
+                <div class="col-sm-8" style="background-color: green;">Green</div>
+                <div class="col-sm-2" style="background-color: blue;">Blue</div>
+            </div>
+        </div>
+        <footer style="background-color: gray;">footer</footer>
     </body>
 </html>
