テーブル実験

--- a/contents/test2.html
+++ b/contents/test2.html
@@ -11,14 +11,23 @@
         <title>Test Page</title>
     </head>
     <body>
-        <header style="background-color: gray;">Header</header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-2" style="background-color: red;">Red</div>
-                <div class="col-sm-8" style="background-color: green;">Green</div>
-                <div class="col-sm-2" style="background-color: blue;">Blue</div>
-            </div>
+        <div class="container">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>プログラミング言語</th>
+                        <th>備考</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>VBA</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <footer style="background-color: gray;">footer</footer>
     </body>
 </html>
