--- a/contents/test2.html
+++ b/contents/test2.html
@@ -24,7 +24,27 @@
                     <tr>
                         <th scope="row">1</th>
                         <td>VBA</td>
-                        <td></td>
+                        <td>一番最初に触れた言語。思い入れはまったくない。</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>C</td>
+                        <td>部活で習った言語。ある程度は書ける。(使えるとは言っていない。)</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>C++</td>
+                        <td>これも部活で習った。ある程度は書けるけどC程ではない。</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>C#</td>
+                        <td>趣味で始めた言語。C-Likeな書き方ができるので好き。最近は全然書いてない。</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                        <td>Bash</td>
+                        <td>趣味で始めた言語。最近はずっとBashばっか。Linuxユーザーは覚えておくべき。</td>
                     </tr>
                 </tbody>
             </table>
