見出しの変更

--- a/contents/test2.html
+++ b/contents/test2.html
@@ -16,8 +16,8 @@
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>プログラミング言語</th>
-                        <th>備考</th>
+                        <th>Lang</th>
+                        <th>Comments</th>
                     </tr>
                 </thead>
                 <tbody>
