--- a/contents/test2.html
+++ b/contents/test2.html
@@ -46,6 +46,26 @@
                         <td>Bash</td>
                         <td>趣味で始めた言語。最近はずっとBashばっか。Linuxユーザーは覚えておくべき。</td>
                     </tr>
+                    <tr>
+                        <th scope="row">6</th>
+                        <td>PHP</td>
+                        <td>趣味で始めた言語。書けるけど好きじゃない。($がめんどくさい。)</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">7</th>
+                        <td>Haskell</td>
+                        <td>面白そうだなぁと思って触った言語。"Hello World!"だけ書いた。(FizzBuzzも書いた気がする。)</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">8</th>
+                        <td>Rust</td>
+                        <td>"Hello World!"</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">9</th>
+                        <td>Java</td>
+                        <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
