見出しの変更

--- a/contents/test2.html
+++ b/contents/test2.html
@@ -12,6 +12,8 @@
     </head>
     <body>
         <div class="container">
+            <h2>プログラミング言語</h2>
+            <hr />
             <table class="table table-striped">
                 <thead>
                     <tr>
