レスポンシブ対応に変更

--- a/contents/test2.html
+++ b/contents/test2.html
@@ -14,62 +14,64 @@
         <div class="container">
             <h2>プログラミング言語</h2>
             <hr />
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Lang</th>
-                        <th>Comments</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>VBA</td>
-                        <td>一番最初に触れた言語。思い入れはまったくない。</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>C</td>
-                        <td>部活で習った言語。ある程度は書ける。(使えるとは言っていない。)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>C++</td>
-                        <td>これも部活で習った。ある程度は書けるけどC程ではない。</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>C#</td>
-                        <td>趣味で始めた言語。C-Likeな書き方ができるので好き。最近は全然書いてない。</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Bash</td>
-                        <td>趣味で始めた言語。最近はずっとBashばっか。Linuxユーザーは覚えておくべき。</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>PHP</td>
-                        <td>趣味で始めた言語。書けるけど好きじゃない。($がめんどくさい。)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Haskell</td>
-                        <td>面白そうだなぁと思って触った言語。"Hello World!"だけ書いた。(FizzBuzzも書いた気がする。)</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Rust</td>
-                        <td>"Hello World!"</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Java</td>
-                        <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Lang</th>
+                            <th>Comments</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>VBA</td>
+                            <td>一番最初に触れた言語。思い入れはまったくない。</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>C</td>
+                            <td>部活で習った言語。ある程度は書ける。(使えるとは言っていない。)</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>C++</td>
+                            <td>これも部活で習った。ある程度は書けるけどC程ではない。</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">4</th>
+                            <td>C#</td>
+                            <td>趣味で始めた言語。C-Likeな書き方ができるので好き。最近は全然書いてない。</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">5</th>
+                            <td>Bash</td>
+                            <td>趣味で始めた言語。最近はずっとBashばっか。Linuxユーザーは覚えておくべき。</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">6</th>
+                            <td>PHP</td>
+                            <td>趣味で始めた言語。書けるけど好きじゃない。($がめんどくさい。)</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">7</th>
+                            <td>Haskell</td>
+                            <td>面白そうだなぁと思って触った言語。"Hello World!"だけ書いた。(FizzBuzzも書いた気がする。)</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">8</th>
+                            <td>Rust</td>
+                            <td>"Hello World!"</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">9</th>
+                            <td>Java</td>
+                            <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </body>
 </html>
