--- a/contents/commands.html
+++ b/contents/commands.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Comatible" content="IE-edge" />
-        <meta name="viewport" content="width-device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="../bootstrap-4.1.3-dist/css/bootstrap.css" />
-        <script src="../jquery-3.3.1.js"></script>
-        <script src="../bootstrap-4.1.3-dist/js/bootstrap.js"></script>
-        <link rel="stylesheet" type="text/css" href="../css/style.css" />
+        <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+        <link rel="stylesheet" type="text/css" href="https://ei1711.github.io/bootstrap-4.1.3-dist/css/bootstrap.css" />
+        <script src="https://ei1711.github.io/jquery-3.3.1.js"></script>
+        <script src="https://ei1711.github.io/bootstrap-4.1.3-dist/js/bootstrap.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://ei1711.github.io/css/style.css" />
         <title>UNIXコマンド</title>
     </head>
     <body>
