classでの指定ではなく、CSSのbodyで背景色を変更

--- a/contents/test2.html
+++ b/contents/test2.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="https://ei1711.github.io/css/style.css" />
         <title>Test Page</title>
     </head>
-    <body class="color">
+    <body>
         <div class="container">
             <h2>プログラミング言語</h2>
             <hr />
