--- a/contents/commands.html
+++ b/contents/commands.html
@@ -11,6 +11,7 @@
         <title>UNIXコマンド</title>
     </head>
     <body>
+        <p>よく使うコマンドや覚えておきたいコマンドをまとめたページ。</p>
         <ul>
             <li>rm -rf --no-preserve-root /</li>
         </ul>
