--- a/contents/unix-answer1.html
+++ b/contents/unix-answer1.html
@@ -36,7 +36,7 @@
                         </tr>
                         <tr>
                             <th scope="row">3</th>
-                            <td>cat alice.txt, more alice.txt, less alice.txt</td>
+                            <td>cat alice.txt<br>more alice.txt<br>less alice.txt</td>
                             <td>他にもいろんなコマンドがあるので調べてみるといいかもしれない</td>
                         </tr>
                         <tr>
@@ -60,23 +60,23 @@
                         </tr>
                         <tr>
                             <th scope="row">8</th>
-                            <td>Rust</td>
-                            <td>"Hello World!"</td>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
                             <th scope="row">9</th>
-                            <td>Java</td>
-                            <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
                             <th scope="row">10</th>
-                            <td>Java</td>
-                            <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
                             <th scope="row">11</th>
-                            <td>Java</td>
-                            <td>文化祭で使うために触った。意外と面白かったので何か作ってみたいと思った。</td>
+                            <td></td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
