--- a/contents/unix-answer1.html
+++ b/contents/unix-answer1.html
@@ -15,8 +15,8 @@
             <h2>UNIXコマンド模範解答 - (問題01 ~ 問題11)</h2>
             <hr />
             <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
+                <table class="table table-bordered">
+                    <thead style="text-align: center;">
                         <tr>
                             <th>#</th>
                             <th>解答</th>
