--- a/contents/unix-answer1.html
+++ b/contents/unix-answer1.html
@@ -16,7 +16,7 @@
             <hr />
             <div class="table-responsive">
                 <table class="table table-bordered">
-                    <thead style="text-align: center;">
+                    <thead>
                         <tr>
                             <th>#</th>
                             <th>解答</th>
