コメントアウト

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
             <li><a href="contents/index.html">メニューはここ</a></li>
             <li><a href="https://twitter.com/ei1711">Twitter - @ei1711</a></li>
         </ul>
-        <div style="color: #1C1C1C;">
-            <a href="https://ei1711.github.io/contents/unix-answer1.html">UNIXコマンド解答</a>
-        </div>
+        <!-- <a href="https://ei1711.github.io/contents/unix-answer1.html">UNIXコマンド解答</a> -->
     </body>
 </html>
